tests/paczka2/big_fuzzy/35223957.err
Error in line 5: A746 A889 38,0
Error in line 18: 6ZBzJBZ1i A889 16,0
Error in line 22: vcHRo3vtwOe S530 94,1
Error in line 19: 6ZBzJBZ1i S846 10,8
Error in line 23: vcHRo3vtwOe A746 3,6
Error in line 28: vcHRo3vtwOe S846 59,2
Error in line 34: gLerhmwfz S846 97,0
Error in line 52: PhLl9SKVZ A889 32,3
Error in line 50: vcHRo3vtwOe S530 12,6
Error in line 60: rsDi S530 333,2
Error in line 69: vcHRo3vtwOe A889 1,6
Error in line 65: 6ZBzJBZ1i S846 95,7
Error in line 75: 6ZBzJBZ1i A746 21,5
Error in line 74: vcHRo3vtwOe A746 43,5
Error in line 78: gLerhmwfz A746 369,6
Error in line 53: PhLl9SKVZ A746 31,8
Error in line 83: A746 A889 77,1
Error in line 101: PhLl9SKVZ A746 41,9
Error in line 126: PhLl9SKVZ S530 182,0
Error in line 150: slgaPL A889 5,19
Error in line 135: PhLl9SKVZ A889 39,4
Error in line 139: slgaPL A746 1,9
Error in line 159: PhLl9SKVZ S846 81,8
Error in line 152: slgaPL A889 27,3
Error in line 164: gLerhmwfz A889 42,7
Error in line 165: gLerhmwfz S530 36,5
Error in line 168: 6ZBzJBZ1i S530 10,7
Error in line 171: slgaPL A889 77,7
Error in line 176: PhLl9SKVZ S846 71,0
Error in line 184: slgaPL A889 65,0
Error in line 194: A746 A746 27,0
Error in line 178: gLerhmwfz A746 9,2
Error in line 207: A746 S530 7,2
Error in line 220: 6ZBzJBZ1i A746 29,5
Error in line 228: A746 S846 9,1
Error in line 239: slgaPL A889 82,9
Error in line 241: slgaPL S846 37,4
Error in line 234: 6ZBzJBZ1i S530 168,4
Error in line 230: gLerhmwfz S846 42,2
